--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,4 +3,7 @@ name = "simple_cgmath"
 version = "0.2.0"
 authors = ["Stallmanifold <stallmanifold@gmail.com>"]
 
+[lib]
+name = "cgmath"
+
 [dependencies]
