--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
-name = "simple_cgmath"
-version = "0.5.0"
+name = "lean_cgmath"
+version = "0.5.1"
 authors = ["Stallmanifold <stallmanifold@gmail.com>"]
 
 [lib]
