--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lean_cgmath"
-version = "0.6.4"
+version = "0.6.5"
 authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
 description = "A low-dimensional linear algebra library for real-time computer graphics and multi-agent simulations."
 
@@ -8,3 +8,4 @@ description = "A low-dimensional linear algebra library for real-time computer g
 name = "cgmath"
 
 [dependencies]
+proptest = "0.9.6"
