--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "lean_cgmath"
-version = "0.7.20"
+name = "gdmath"
+version = "0.7.21"
 authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
 description = "A low-dimensional linear algebra library for real-time computer graphics and real-time physics."
 keywords = ["graphics"]
 
 [lib]
-name = "cgmath"
+name = "gdmath"
 
 [dependencies]
 num-traits = "0.2"
