--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "gdmath"
-version = "0.7.46"
+version = "0.7.47"
 authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
 description = "A low-dimensional linear algebra library for real-time computer graphics and real-time physics."
-keywords = ["graphics"]
+keywords = ["computer graphics", "game programming", "linear algebra", "quaternions"]
 
 [lib]
 name = "gdmath"
