--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,8 +1,8 @@
 [package]
 name = "gdmath"
-version = "0.7.132"
+version = "0.7.133"
 authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
-description = "A low-dimensional linear algebra library for real-time computer graphics and real-time physics."
+description = "A low-dimensional linear algebra library for real-time computer graphics."
 keywords = ["computer graphics", "game programming", "linear algebra", "quaternions"]
 
 [lib]
