Add keyword to description.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,9 +1,9 @@
 [package]
 name = "gdmath"
-version = "0.7.145"
+version = "0.7.146"
 authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
 description = "A low-dimensional linear algebra library for real-time computer graphics."
-keywords = ["computer graphics", "game programming", "linear algebra", "quaternions"]
+keywords = ["computer graphics", "game programming", "linear algebra", "quaternions", "real-time rendering"]
 
 [lib]
 name = "gdmath"
