--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,12 +1,12 @@
 [package]
-name = "gdmath"
+name = "cglinalg"
 version = "0.7.180"
 authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
 description = "A low-dimensional linear algebra library for real-time computer graphics."
 keywords = ["computer graphics", "game programming", "linear algebra", "quaternions", "real-time rendering"]
 
 [lib]
-name = "gdmath"
+name = "cglinalg"
 
 [dependencies]
 num-traits = "0.2.12"
