--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,10 +1,18 @@
 [package]
 name = "cglinalg"
-version = "0.7.229"
+version = "0.7.230"
 edition = "2018"
 authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
 description = "A low-dimensional linear algebra library for real-time computer graphics."
-keywords = ["computer graphics", "game programming", "linear algebra", "quaternions", "real-time rendering"]
+keywords = [
+    "computer graphics", 
+    "game programming", 
+    "linear algebra", 
+    "quaternions", 
+    "real-time rendering",
+    "real-time collision detection",
+    "low-dimensional"
+]
 readme = "README.md"
 repository = "https://github.com/lambdaxymox/cglinalg"
 
