--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cglinalg"
-version = "0.7.232"
+version = "0.7.233"
 edition = "2018"
 authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
 description = "A low-dimensional linear algebra library for real-time computer graphics."
@@ -24,9 +24,8 @@ repository = "https://github.com/lambdaxymox/cglinalg"
 name = "cglinalg"
 path = "src/lib.rs"
 
-[feature]
-default = ["std"]
-std = []
+[features]
+default = []
 glm = []
 
 
