--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "cglinalg"
-version = "0.7.238"
+version = "0.7.239"
 edition = "2018"
 authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
 description = "A low-dimensional linear algebra library for real-time computer graphics."
@@ -18,6 +18,7 @@ keywords = [
     "linear algebra", 
     "quaternion", 
     "real-time",
+    "rendering",
     "collision detection",
     "low-dimensional",
     "matrix",
@@ -34,7 +35,6 @@ path = "src/lib.rs"
 [features]
 default = []
 glm = []
-
 
 [dependencies]
 num-traits = "0.2.12"
