--- a/crates/cglinalg_core/Cargo.toml
+++ b/crates/cglinalg_core/Cargo.toml
@@ -56,13 +56,13 @@ criterion = "0.5.1"
 rand = "0.8.5"
 rand_isaac = "0.3.0"
 
-[profile.release]
-opt-level = 2
+# [profile.release]
+# opt-level = 2
 
-[profile.test]
-# Disable overflow checks during testing since overflowing in integer operations
-# is desireable behavior in debug mode.
-overflow-checks = false
+# [profile.test]
+# # Disable overflow checks during testing since overflowing in integer operations
+# # is desireable behavior in debug mode.
+# overflow-checks = false
 
 [[bench]]
 name = "bench_vector"
