Move numeric module code to a dedicated crate.

--- a/crates/cglinalg_core/Cargo.toml
+++ b/crates/cglinalg_core/Cargo.toml
@@ -41,6 +41,10 @@ alloc = []
 std = []
 
 
+[dependencies.cglinalg_numeric]
+path = "../cglinalg_numeric"
+version = "0.16.10"
+
 [dependencies.approx]
 version = "0.5.1"
 default-features = false
