--- a/crates/cglinalg_numeric/Cargo.toml
+++ b/crates/cglinalg_numeric/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cglinalg"
+name = "cglinalg_numeric"
 version = "0.16.10"
 edition = "2021"
 authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
@@ -23,14 +23,10 @@ readme = "README.md"
 repository = "https://github.com/lambdaxymox/cglinalg"
 
 [lib]
-name = "cglinalg"
+name = "cglinalg_numeric"
 path = "src/lib.rs"
 crate-type = ["rlib", "cdylib"]
 
-[workspace]
-members = [
-    "crates/*"
-]
 
 [features]
 default = ["std"]
@@ -44,19 +40,6 @@ alloc = []
 # Option: "std" enables support for environments that use the full standard library.
 std = []
 
-[dependencies]
-
-[dependencies.cglinalg_numeric]
-path = "crates/cglinalg_numeric"
-version = "0.16.10"
-
-[dependencies.cglinalg_core]
-path = "crates/cglinalg_core"
-version = "0.16.10"
-
-[dependencies.cglinalg_transform]
-path = "crates/cglinalg_transform"
-version = "0.16.10"
 
 [dependencies.approx]
 version = "0.5.1"
@@ -66,18 +49,4 @@ default-features = false
 version = "0.2.16"
 default-features = false
 features = ["libm"]
-
-[dev-dependencies]
-proptest = "1.2.0"
-criterion = "0.5.1"
-rand = "0.8.5"
-rand_isaac = "0.3.0"
-
-[profile.release]
-opt-level = 2
-
-[profile.test]
-# Disable overflow checks during testing since overflowing in integer operations
-# is desireable behavior in debug mode.
-overflow-checks = false
 
