Migrated typed angles and complex numbers to their own internal crates.

--- a/crates/cglinalg_complex/Cargo.toml
+++ b/crates/cglinalg_complex/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "cglinalg"
+name = "cglinalg_complex"
 version = "0.16.10"
 edition = "2021"
 authors = ["LambdaXymox <lambda.xymox@gmail.com>"]
@@ -23,14 +23,10 @@ readme = "README.md"
 repository = "https://github.com/lambdaxymox/cglinalg"
 
 [lib]
-name = "cglinalg"
+name = "cglinalg_complex"
 path = "src/lib.rs"
 crate-type = ["rlib", "cdylib"]
 
-[workspace]
-members = [
-    "crates/*"
-]
 
 [features]
 default = ["std"]
@@ -44,36 +40,18 @@ alloc = []
 # Option: "std" enables support for environments that use the full standard library.
 std = []
 
-[dependencies]
 
 [dependencies.cglinalg_numeric]
-path = "crates/cglinalg_numeric"
+path = "../cglinalg_numeric"
 version = "0.16.10"
 
 [dependencies.cglinalg_trigonometry]
-path = "crates/cglinalg_trigonometry"
-version = "0.16.10"
-
-[dependencies.cglinalg_complex]
-path = "crates/cglinalg_complex"
-version = "0.16.10"
-
-[dependencies.cglinalg_core]
-path = "crates/cglinalg_core"
-version = "0.16.10"
-
-[dependencies.cglinalg_transform]
-path = "crates/cglinalg_transform"
+path = "../cglinalg_trigonometry"
 version = "0.16.10"
 
 [dependencies.approx]
 version = "0.5.1"
 default-features = false
-
-[dependencies.num-traits]
-version = "0.2.16"
-default-features = false
-features = ["libm"]
 
 [dev-dependencies]
 proptest = "1.2.0"
@@ -81,11 +59,11 @@ criterion = "0.5.1"
 rand = "0.8.5"
 rand_isaac = "0.3.0"
 
-[profile.release]
-opt-level = 2
+# [profile.release]
+# opt-level = 2
 
-[profile.test]
-# Disable overflow checks during testing since overflowing in integer operations
-# is desireable behavior in debug mode.
-overflow-checks = false
+# [profile.test]
+# # Disable overflow checks during testing since overflowing in integer operations
+# # is desireable behavior in debug mode.
+# overflow-checks = false
 
