--- a/crates/cglinalg_transform/Cargo.toml
+++ b/crates/cglinalg_transform/Cargo.toml
@@ -59,6 +59,10 @@ path = "../cglinalg_core"
 version = "0.17.0"
 
 [dev-dependencies]
+proptest = "1.2.0"
+criterion = "0.5.1"
+rand = "0.8.5"
+rand_isaac = "0.3.0"
 
 # [profile.release]
 # opt-level = 2
