--- a/rustfmt.toml
+++ b/rustfmt.toml
@@ -1,5 +1,7 @@
 unstable_features = true
 brace_style = "SameLineWhere"
 max_width = 160
+array_width = 100
+imports_layout = "Vertical"
 blank_lines_upper_bound = 2
 trailing_comma = "Vertical"
