--- a/Cargo.toml
+++ b/Cargo.toml
@@ -66,9 +66,10 @@ version = "0.19.1"
 path = "crates/cglinalg_transform"
 version = "0.19.1"
 
-[dependencies.approx]
-version = "0.5.1"
-default-features = false
+[dependencies.approx_cmp]
+git = "https://github.com/lambdaxymox/approx_cmp/"
+version = "1.0.0"
+features = ["core"]
 
 [dependencies.num-traits]
 version = "0.2.16"
