--- a/crates/cglinalg_core/Cargo.toml
+++ b/crates/cglinalg_core/Cargo.toml
@@ -53,9 +53,10 @@ version = "0.19.1"
 path = "../cglinalg_complex"
 version = "0.19.1"
 
-[dependencies.approx]
-version = "0.5.1"
-default-features = false
+[dependencies.approx_cmp]
+git = "https://github.com/lambdaxymox/approx_cmp/"
+version = "1.0.0"
+features = ["core"]
 
 [dev-dependencies]
 proptest = "1.3.1"
